<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiFace</string>
    <string name="logocondesc">LogoContent</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="cntrlpanel">Control Panel</string>
    <string name="abt">About</string>
    <string name="abouthead">About Us</string>
    <string name="back">back</string>
    <string name="about_body">     This is multiface app, \n     It is designed so as, to improve the security and create profilesfor user.\n     So now the users can experience multiple profiles in the android powered phones and tablets.</string>
    <string name="About">About</string>
    <string name="profhead">PROFILE </string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="Profile_name">Profile name</string>
    <string name="prof">Profile Settings</string>
    <string name="profpass">Password</string>
    <string name="profrepass">Re-Enter Password</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_new__profile">New_Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_list">ProfileList</string>
    <string name="create">+ Create</string>
    <string name="choose">Choose a Profile</string>
    <string name="title_activity_profile_settings">ProfileSettings</string>
    <string name="pwdset">Change Password</string>
    <string name="manprof">Manage Profile</string>
    <string name="rmprof">Remove Profile</string>
    <string name="title_activity_profile_password_remove">ProfilePasswordRemove</string>
    <string name="enterpass">Enter the Profile Password </string>
    <string name="changepass">Change Password</string>
    <string name="title_activity_change_profile_password">ChangeProfilePassword</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="repass">Re-Enter New Password</string>
    <string name="title_activity_manage_profile">ManageProfile</string>
    <string name="manageapps">Manage Apps</string>
    <string name="title_activity_manage_apps">ManageApps</string>
    <string name="remall">Remove All Apps</string>
    <string name="addall">Add All Apps</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="login">Login</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="logout">Logout</string>
    <string name="title_activity_start">Start</string>

</resources>