<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Profile" >

<Button
    android:id="@+id/button2"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="#6799ee"
    android:onClick="onBack"
    android:text="@string/back"
    android:textColor="#ffffff" />

<TextView
    android:id="@+id/profhead"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/button1"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="46dp"
    android:text="@string/profhead"
    android:textColor="#6799ee"
    android:textSize="48sp" />

<Button
    android:id="@+id/button1"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#6799ee"
    android:onClick="onProfileClick"
    android:text="@string/profile"
    android:textColor="#ffffff" />
   
</RelativeLayout>