<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/abouthead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="44dp"
        android:text="@string/abouthead"
        android:textColor="#ffffff"
        android:textSize="48sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back"
        android:onClick="back" />

    <TextView
        android:id="@+id/about_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/abouthead"
        android:layout_marginTop="44dp"
        android:text="@string/about_body"
        android:textColor="#ffffff"
        android:textSize="24sp" />

</RelativeLayout>