<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSettings" >

    <AbsoluteLayout
        android:layout_width="500dp"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"
                android:text="@string/prof"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#6799ee"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/prof_heading_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="25dp"
				android:editable="true"
				android:text=""
				android:textStyle="bold"
				android:textColor="#6799ee"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/prof_heading_settings"
                android:layout_marginTop="25dp"
                android:background="#6799ee"
                android:text="@string/changepass"
                android:textColor="#ffffff"
                android:onClick="changePassword"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button1"
                android:layout_marginTop="30dp"
                android:background="#6799ee"
                android:text="@string/manprof"
                android:textColor="#ffffff"
                android:onClick="manageProfile"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button2"
                android:layout_marginTop="30dp"
                android:background="#6799ee"
                android:text="@string/rmprof"
                android:onClick="onRemoveProfile"
                android:textColor="#ffffff"
                android:textSize="30sp" />

        </RelativeLayout>

    </AbsoluteLayout>

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#6799ee"
        android:onClick="backClicked"
        android:text="@string/back"
        android:textColor="#ffffff" />

</RelativeLayout>