<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ManageProfile" >

    <AbsoluteLayout
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:text="@string/prof"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#6799ee"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignRight="@+id/textView2"
                android:background="#6799ee"
                android:textColor="#ffffff"
                android:onClick="cancelClicked"
                android:text="@string/cancel" />

            <EditText
                android:id="@+id/manProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/textView1"
                android:background="#6799ee"
                android:ems="10"
                android:editable="true"
                android:text=""
                android:textColor="#ffffff"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginRight="74dp"
                android:layout_marginTop="60dp"
                android:layout_toLeftOf="@+id/button2"
                android:text="@string/Profile_name"
                android:textColor="#6799ee"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="52dp"
                android:background="#6799ee"
                android:textColor="#ffffff"
                android:onClick="manApps"
                android:text="@string/manageapps" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="36dp"
                android:layout_marginLeft="33dp"
                android:background="#6799ee"
                android:textColor="#ffffff"
                android:onClick="OKClicked"
                android:text="@string/ok" />

        </RelativeLayout>

    </AbsoluteLayout>

</RelativeLayout>