<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ChangeProfilePassword" >

    <AbsoluteLayout
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:text="@string/pwdset"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#6799ee"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView4"
                android:layout_alignRight="@+id/textView4"
                android:layout_marginBottom="45dp"
                android:text="@string/newpass"
                android:textColor="#6799ee"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:background="#6799ee"
                android:textColor="#ffffff"
                android:onClick="OKClicked"
                android:text="@string/ok" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignRight="@+id/textView2"
                android:background="#6799ee"
                android:textColor="#ffffff"
                android:onClick="cancelClicked"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_marginBottom="45dp"
                android:text="@string/oldpass"
                android:textColor="#6799ee"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/newpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/textView3"
                android:background="#6799ee"
                android:ems="10"
                android:inputType="numberPassword" />

            <EditText
                android:id="@+id/oldpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/textView1"
                android:background="#6799ee"
                android:ems="10"
                android:inputType="numberPassword" >
                 <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/repass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/textView4"
                android:background="#6799ee"
                android:ems="10"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button1"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="26dp"
                android:text="@string/profrepass"
                android:textColor="#6799ee"
                android:textSize="30sp" />

        </RelativeLayout>

    </AbsoluteLayout>

</RelativeLayout>