<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileList" >

    <AbsoluteLayout
        android:id="@+id/absoluteLayout1"
        android:layout_width="500dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_x="0dp"
            android:layout_y="0dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/choose"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#6799ee"
                android:textSize="42sp" />

            <AbsoluteLayout
                android:id="@+id/abslayout1"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true" >

                <Button
                    android:id="@+id/createbutton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#6799ee"
                    android:onClick="createClicked"
                    android:text="@string/create"
                    android:textColor="#ffffff"
                    android:width="250dp" />
            </AbsoluteLayout>
        </RelativeLayout>
    </AbsoluteLayout>

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#6799ee"
        android:onClick="backClicked"
        android:text="@string/back"
        android:textColor="#ffffff" />

</RelativeLayout>
