<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePasswordRemove" >

    <AbsoluteLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="500dp"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/enterpass"
                android:textSize="40sp"
                android:textColor="#6799ee"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ppredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:ems="10"
                android:textColor="#6799ee"
                android:inputType="numberPassword" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ppredit"
                android:layout_below="@+id/ppredit"
                android:layout_marginTop="69dp"
                android:onClick="OKClicked"
                android:text="@string/ok" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignRight="@+id/ppredit"
                android:onClick="cancelClicked"
                android:text="@string/cancel" />
            
        </RelativeLayout>

    </AbsoluteLayout>

</RelativeLayout>